--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [tool.poetry]
 name = "brokersystem"
 version = "0.2.4"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "A Python module for communicating with brokersystem"
+license = "ISC"
+authors = ["chocolate <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-logzero = "^1.7.0"
+requests = "^1.0"
+logzero = "^1.7"
+pandas = "^1.0"
+pillow = "^9.0"
 
 
 [build-system]
