--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ authors = ["chocolate <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-requests = "^2.31.0"
-logzero = "^1.7.0"
-pandas = "^2.0.3"
-pillow = "^10.0.0"
+python = "^3.9"
+requests = "^2.31"
+logzero = "^1.7"
+pandas = "^2.0"
+pillow = ">=10.0"
 
 
 [build-system]
